--- a/project.html
+++ b/project.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Microbetting feed</title>
+  <title>Popup feed demo</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <main class="app">
-    <h1>Popup Feed Demo</h1>
+    <h1>Microbetting demo app</h1>
     <p>Click the button to open a popup window that contains a scrollable feed.</p>
     <button id="open-feed-btn" class="btn">Open Feed</button>
   </main>
